Small bug in portrait on mobile

--- a/styles/main.less
+++ b/styles/main.less
@@ -238,6 +238,7 @@ h1, h2 {
     max-width: 18em;
     margin: 1em auto 0 auto;
     display: block;
+    width: 100%;
 }
 
 .contact-wrapper {
